footer, header and breadcrumbs alignment fix

--- a/src/components/CustomTabs/custom-tabs.scss
+++ b/src/components/CustomTabs/custom-tabs.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
+  font-family: var(--ibm-font-family-base);
+  font-weight: var(--ifm-font-weight-semibold);
 
   &_header {
     margin-block: 64px;
