--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     gap: rem(9.6);
-    max-width: 1264px;
+    max-width: 1310px;
   }
 
   .FooterLogo {
