--- a/src/features/dashboard/manage-dashboard/manage-dashboard.scss
+++ b/src/features/dashboard/manage-dashboard/manage-dashboard.scss
@@ -6,12 +6,12 @@
 
 .breadcrumbs_wrapper {
   width: 100%;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   max-width: 82rem;
   margin-left: auto;
   margin-right: auto;
 
   @media screen and (max-width: 1440px) {
-    max-width: auto;
+    max-width: 90%;
   }
 }
